--- a/src/states/CMakeLists.txt
+++ b/src/states/CMakeLists.txt
@@ -2,9 +2,13 @@ add_library(states STATIC
     ExitState.cpp
     IntroState.cpp
     TitleState.cpp
+    parts/MainGameState.cpp
+    parts/Part1State.cpp
+    parts/Part2State.cpp
+    parts/Part3State.cpp
 )
-# Expose the public headers for states (located in src/include/states)
-target_include_directories(states PUBLIC ${CMAKE_SOURCE_DIR}/src/include/states)
+
+target_include_directories(states PUBLIC ${CMAKE_SOURCE_DIR}/src/include)
 
 # If the states module depends on the core library:
 target_link_libraries(states PUBLIC vendor)
