--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Could also be added to CMakeSettings.json ("cmakeCommandArgs": "-DBUILD_SHARED_LIBS=OFF",)
-set(BUILD_SHARED_LIBS OFF)
+set(BUILD_SHARED_LIBS ON)
 
 if(WIN32)
     set(ENV{PATH} "$ENV{PATH};${CMAKE_SOURCE_DIR}/vendor/nasm-2.16.03")
@@ -18,3 +18,14 @@ endif()
 
 add_subdirectory(vendor)
 add_subdirectory(src)
+
+# Install
+# Install the executable
+install(TARGETS ${PROJECT_NAME} DESTINATION bin)
+
+# Install the assets folder
+install(
+    DIRECTORY src/assets
+    DESTINATION assets
+    FILES_MATCHING PATTERN "*.*"  # Copy all files
+)
