feat: critter wave system + dynamic start and end squares

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/in
 # Submodules
 add_subdirectory(states)
 add_subdirectory(ui)
+add_subdirectory(critter)
 # Copy Assets to the build directory
 add_custom_command(
     TARGET ${PROJECT_NAME} POST_BUILD
@@ -15,4 +16,4 @@ add_custom_command(
     $<TARGET_FILE_DIR:${PROJECT_NAME}>/assets
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE vendor states ui)
+target_link_libraries(${PROJECT_NAME} PRIVATE vendor states ui critter)
