--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(${PROJECT_NAME})
-target_sources(${PROJECT_NAME} PRIVATE main.cpp LTimer.cpp "include/ui/MainMenuButton.h")
+target_sources(${PROJECT_NAME} PRIVATE main.cpp LTimer.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE vendor states ui)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
@@ -8,6 +8,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/in
 add_subdirectory(states)
 add_subdirectory(ui)
 add_subdirectory(critter)
+add_subdirectory(tower)
 # Copy Assets to the build directory
 add_custom_command(
     TARGET ${PROJECT_NAME} POST_BUILD
@@ -16,4 +17,4 @@ add_custom_command(
     $<TARGET_FILE_DIR:${PROJECT_NAME}>/assets
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE vendor states ui critter)
+target_link_libraries(${PROJECT_NAME} PRIVATE vendor states ui critter tower)
