--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(ui STATIC
     LButton.cpp
     LTexture.cpp
- "MainMenuButton.cpp")
+    MainMenuButton.cpp)
 
 target_include_directories(ui PUBLIC ${CMAKE_SOURCE_DIR}/src/include)
 
