feat: added map feature

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,15 @@
 add_executable(${PROJECT_NAME})
 target_sources(${PROJECT_NAME} PRIVATE main.cpp LTimer.cpp)
-target_link_libraries(${PROJECT_NAME} PRIVATE vendor states ui)
+target_link_libraries(${PROJECT_NAME} PRIVATE vendor states ui map util)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 # Submodules
 add_subdirectory(states)
 add_subdirectory(ui)
+add_subdirectory(map)
+add_subdirectory(util)
+
 # Copy Assets to the build directory
 add_custom_command(
     TARGET ${PROJECT_NAME} POST_BUILD
@@ -15,4 +18,4 @@ add_custom_command(
     $<TARGET_FILE_DIR:${PROJECT_NAME}>/assets
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE vendor states ui)
+target_link_libraries(${PROJECT_NAME} PRIVATE vendor states ui map util)
