--- a/.github/workflows/github_pages.yaml
+++ b/.github/workflows/github_pages.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: Doxygen Github Pages
 
 on:
   push:
@@ -9,7 +9,6 @@ jobs:
   docs:
     name: Generate and Deploy Doxygen Docs
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
