--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,9 @@ jobs:
             submodules: true
             fetch-depth: 0
 
+      - name: Get Gitmodules (Recursively)
+        run: git submodule update --init --recursive
+            
       - name: Configure CMake
         run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
 
