--- a/.github/workflows/github_pages.yaml
+++ b/.github/workflows/github_pages.yaml
@@ -5,13 +5,12 @@ on:
     branches: [main]
   workflow_dispatch:
   
-permissions:
-  contents: write
-
 jobs:
   docs:
     name: Generate and Deploy Doxygen Docs
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -19,25 +18,10 @@ jobs:
             submodules: true
             fetch-depth: 0
 
-      - name: Install Doxygen and Graphviz
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y doxygen graphviz
-
-      - name: Generate Documentation
-        run: doxygen Doxyfile
-
-      # - name: Generate PDF Version Of Documentation
-      #   run: |
-      #     cd docs/latex
-      #     make  
-
-      - name: Create .nojekyll file
-        run: touch docs/html/.nojekyll
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+      - uses: DenverCoder1/doxygen-github-pages-action@v2.0.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/html
-          # cname: comp345.ngrenier.com
+          branch: gh-pages
+          folder: docs/html
+          config_file: Doxyfile
+          doxygen_version: 1.13.2
