fix: move .h tower files into towers folder

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(${PROJECT_NAME})
 target_sources(${PROJECT_NAME} PRIVATE main.cpp LTimer.cpp)
-target_link_libraries(${PROJECT_NAME} PRIVATE vendor states ui map util tower)
+target_link_libraries(${PROJECT_NAME} PRIVATE vendor states ui map util towers)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
@@ -10,7 +10,7 @@ add_subdirectory(ui)
 add_subdirectory(map)
 add_subdirectory(util)
 add_subdirectory(critter)
-add_subdirectory(tower)
+add_subdirectory(towers)
 
 # Copy Assets to the build directory
 add_custom_command(
@@ -20,4 +20,4 @@ add_custom_command(
     $<TARGET_FILE_DIR:${PROJECT_NAME}>/assets
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE vendor states ui map util critter tower)
+target_link_libraries(${PROJECT_NAME} PRIVATE vendor states ui map util critter towers)
