fix: CMake not resolving merged tower .h files

--- a/src/towers/CMakeLists.txt
+++ b/src/towers/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(tower STATIC
+add_library(towers STATIC
     CritterTower.cpp
     CritterProjectile.cpp
     Tower.cpp
@@ -6,9 +6,10 @@ add_library(tower STATIC
     Projectile.cpp
     RapidFireTower.cpp
     StandardTower.cpp
+    DummyCritter.cpp
 )
 
-target_include_directories(tower PUBLIC ${CMAKE_SOURCE_DIR}/src/include)
+target_include_directories(towers PUBLIC ${CMAKE_SOURCE_DIR}/src/include)
 
 # If the tower module depends on the core library:
-target_link_libraries(tower PUBLIC vendor)
+target_link_libraries(towers PUBLIC vendor)
