adding classes for Observer and Observable base classes; testing state for side UI included, accessed with part2 button

--- a/src/states/CMakeLists.txt
+++ b/src/states/CMakeLists.txt
@@ -6,7 +6,7 @@ add_library(states STATIC
     parts/Part1State.cpp
     parts/Part2State.cpp
     parts/Part3State.cpp
-)
+    parts/UITestState.cpp)
 
 target_include_directories(states PUBLIC ${CMAKE_SOURCE_DIR}/src/include)
 
