build: always copy over the src/assets directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,12 @@ install(
     DESTINATION assets
     FILES_MATCHING PATTERN "*.*"  # Copy all files
 )
+
+# Always copy assets folder to build directory
+add_custom_target(copy_assets ALL
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/src/assets ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/assets
+    DEPENDS ${CMAKE_SOURCE_DIR}/src/assets
+)
+
+add_dependencies(${PROJECT_NAME} copy_assets)
