--- a/src/states/CMakeLists.txt
+++ b/src/states/CMakeLists.txt
@@ -2,13 +2,10 @@ add_library(states STATIC
     ExitState.cpp
     IntroState.cpp
     TitleState.cpp
-    parts/Part1State.cpp
-    parts/Part2State.cpp
-    parts/MainGameState.cpp
-    parts/MapSelectState.cpp 
-    parts/MapEditorState.cpp
-    parts/Part3State.cpp
-    parts/UITestState.cpp)
+    "MainGameState.cpp"
+    "MapSelectState.cpp" 
+    "MapEditorState.cpp"
+    )
 
 target_include_directories(states PUBLIC ${CMAKE_SOURCE_DIR}/src/include)
 
