--- a/src/towers/CMakeLists.txt
+++ b/src/towers/CMakeLists.txt
@@ -4,8 +4,7 @@ add_library(towers STATIC
     Projectile.cpp
     RapidFireTower.cpp
     StandardTower.cpp
-    
-)
+    TowerGroup.cpp)
 
 target_include_directories(towers PUBLIC ${CMAKE_SOURCE_DIR}/src/include)
 
