feat: critter texture added

--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library(ui STATIC
     DetailLabel.cpp
     DetailButton.cpp
     DetailAttribute.cpp
-    TowerObserver.cpp
+    "../towers/TowerObserver.cpp"
 )
 
 target_include_directories(ui PUBLIC ${CMAKE_SOURCE_DIR}/src/include)
