feat: fire and ice tower decorators

--- a/src/towers/CMakeLists.txt
+++ b/src/towers/CMakeLists.txt
@@ -4,7 +4,9 @@ add_library(towers STATIC
     Projectile.cpp
     RapidFireTower.cpp
     StandardTower.cpp
-    TowerGroup.cpp)
+    TowerGroup.cpp
+    powerups/FirePowerup.cpp
+    powerups/IcePowerup.cpp "powerups/Powerup.cpp")
 
 target_include_directories(towers PUBLIC ${CMAKE_SOURCE_DIR}/src/include)
 
