feat: revamped the critter class
Critter is now an abstract class. Created 3 types of critters. Added movement and death animations for all critters (Needs to be resized). Fixed some issues with other critter related code.

--- a/src/critter/CMakeLists.txt
+++ b/src/critter/CMakeLists.txt
@@ -1,7 +1,10 @@
 add_library(critter STATIC
 Critter.cpp
 CritterGroup.cpp
-CritterObserver.cpp)
+NormalCritter.cpp
+FastCritter.cpp
+TankCritter.cpp
+CritterObserver.cpp) 
 
 target_include_directories(critter PUBLIC ${CMAKE_SOURCE_DIR}/src/include)
 
