--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,27 +10,27 @@ on:
 jobs:
   build:
     name: Build C++ Project on Windows
-    runs-on: windows-latest
+    runs-on: windows-2025
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
             submodules: true
             fetch-depth: 0
-
+            
       - name: Get Gitmodules (Recursively)
         run: git submodule update --init --recursive
           
+      # - name: Create Build Directory
+      #   run: mkdir -p ./build
+
+      # - name: Configure CMake Project
+      #   working-directory: ./build
+      #   run: cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXE_LINKER_FLAGS="-Wl" ..
+
+      # - name: Build the Project
+      #   working-directory: ./build
+      #   run: cmake --build . --config Release --verbose
+
       - name: Build the Release Build
         run: ./install.bat
-
-      - name: Create Build Directory
-        run: mkdir -p ./build2
-
-      - name: Configure CMake Project
-        working-directory: ./build2
-        run: cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXE_LINKER_FLAGS="-Wl" -DBUILD_SHARED_LIBS=OFF ..
-
-      - name: Build the Project
-        working-directory: ./build2
-        run: cmake --build . --config Release
