--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,16 +21,16 @@ jobs:
       - name: Get Gitmodules (Recursively)
         run: git submodule update --init --recursive
           
-      - name: Build the Release Build
-        run: ./install.bat
-
       - name: Create Build Directory
-        run: mkdir -p ./build2
+        run: mkdir -p ./build
 
       - name: Configure CMake Project
-        working-directory: ./build2
+        working-directory: ./build
         run: cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXE_LINKER_FLAGS="-Wl" -DBUILD_SHARED_LIBS=OFF ..
 
       - name: Build the Project
-        working-directory: ./build2
-        run: cmake --build . --config Release
+        working-directory: ./build
+        run: cmake --build . --config Release --verbose
+
+      - name: Build the Release Build
+        run: ./install.bat
