--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,7 @@ jobs:
   build:
     name: Build C++ Project on Windows
     runs-on: windows-latest
+    # runs-on: windows-2022
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -18,6 +19,11 @@ jobs:
             submodules: true
             fetch-depth: 0
 
+      - name: Install Windows SDK with Game Input
+        run: |
+          choco install windows-sdk-10-version-2004-all --version=10.0.20348.0 -y
+        shell: powershell
+            
       - name: Get Gitmodules (Recursively)
         run: git submodule update --init --recursive
           
@@ -26,7 +32,7 @@ jobs:
 
       - name: Configure CMake Project
         working-directory: ./build
-        run: cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXE_LINKER_FLAGS="-Wl" -DBUILD_SHARED_LIBS=OFF ..
+        run: cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXE_LINKER_FLAGS="-Wl" ..
 
       - name: Build the Project
         working-directory: ./build
