--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,10 +19,10 @@ jobs:
             submodules: true
             fetch-depth: 0
 
-      - name: Install Windows SDK with Game Input
-        run: |
-          choco install windows-sdk-10-version-2004-all --version=10.0.20348.0 -y
-        shell: powershell
+      # - name: Install Windows SDK with Game Input
+      #   run: |
+      #     choco install windows-sdk-10-version-2004-all --version=10.0.20348.0 -y
+      #   shell: powershell
             
       - name: Get Gitmodules (Recursively)
         run: git submodule update --init --recursive
