--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,18 +23,7 @@ jobs:
         run: git submodule update --init --recursive
 
       - name: Install the Release Build
-        run: ./install.bat
-        
-      # - name: Create Build Directory
-      #   run: mkdir -p ./build
-
-      # - name: Configure CMake Project
-      #   working-directory: ./build
-      #   run: cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXE_LINKER_FLAGS="-Wl" ..
-
-      # - name: Build the Project
-      #   working-directory: ./build
-      #   run: cmake --build . --config Release
+        run: ./install.bat /skipstart
 
       - name: Zip the Release Directory
         working-directory: ./build
