--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,10 +24,10 @@ jobs:
 
       - name: Install the Release Build
         run: ./install.bat /skipstart /verbose /clean-pb
-
+        
       - name: Zip the Release Directory
         working-directory: ./build
-        run: powershell Compress-Archive -Path * -DestinationPath ../COMP-345.zip
+        run: powershell Compress-Archive -Path Release/* -DestinationPath ../COMP-345.zip
 
       - name: Upload Files to Release
         uses: actions/upload-release-asset@v1
