WIP: refactored texture loading
some issues with textures not being present to render

--- a/src/towers/CMakeLists.txt
+++ b/src/towers/CMakeLists.txt
@@ -1,15 +1,15 @@
 add_library(towers STATIC
     Tower.cpp
+    StandardTower.cpp
+    RapidFireTower.cpp
     CannonTower.cpp
     Projectile.cpp
-    RapidFireTower.cpp
-    StandardTower.cpp
     TargetNearExit.cpp
     TargetNearTower.cpp
     TargetStrongest.cpp
     TargetWeakest.cpp
-    
     TowerGroup.cpp
+    TowerObserver.cpp
     powerups/Powerup.cpp)
 
 target_include_directories(towers PUBLIC ${CMAKE_SOURCE_DIR}/src/include)
