--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(util STATIC
     Vector2D.cpp
     Observable.cpp
     Observer.cpp
-)
+    TextureManager.cpp)
 
 target_include_directories(util PUBLIC ${CMAKE_SOURCE_DIR}/src/include)
 
