feat: added AutioManager
Cache loaded audios, set audio volume, only compile necessary SDL_Mixer audio formats

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -2,7 +2,8 @@ add_library(util STATIC
     Vector2D.cpp
     Observable.cpp
     Observer.cpp
-    TextureManager.cpp)
+    TextureManager.cpp 
+    AudioManger.cpp)
 
 target_include_directories(util PUBLIC ${CMAKE_SOURCE_DIR}/src/include)
 
